[tool.poetry]
name = "mezzo"
version = "0.0.0"
description = "Wheel package manager"
authors = ["Ethan Paul <e@enp.one>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
peewee = "^3.13.1"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
tox = "^3.14.5"
sphinx = "^2.4.4"
sphinx-autodoc-typehints = {version = "^1.10.3", python = "^3.5.2"}
reorder-python-imports = {version = "^2.1.0", python = "^3.6.1"}
bandit = "^1.6.2"
ipython = {version = "^7.13.0", python = "^3.6"}
pre-commit = "^1.10"
mypy = "^0.770"
black = {version = "^19.10b0", allow-prereleases = true, python = "^3.6"}
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
